--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Slides and demo for Advanced WebPack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "http-server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/jcreamer898/universal-apps-lessons-from-the-trenches/issues"
   },
-  "homepage": "https://github.com/jcreamer898/universal-apps-lessons-from-the-trenches#readme"
+  "homepage": "https://github.com/jcreamer898/universal-apps-lessons-from-the-trenches#readme",
+  "dependencies": {
+    "http-server": "^0.9.0"
+  }
 }
